@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>612</width>
-    <height>643</height>
+    <height>650</height>
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout_4">
@@ -262,22 +262,6 @@ It's time the desktop caught up with us.</string>
                    <item>
                     <layout class="QHBoxLayout" name="horizontalLayout_2">
                      <item>
-                      <spacer name="horizontalSpacer_4">
-                       <property name="orientation">
-                        <enum>Qt::Horizontal</enum>
-                       </property>
-                       <property name="sizeType">
-                        <enum>QSizePolicy::MinimumExpanding</enum>
-                       </property>
-                       <property name="sizeHint" stdset="0">
-                        <size>
-                         <width>40</width>
-                         <height>20</height>
-                        </size>
-                       </property>
-                      </spacer>
-                     </item>
-                     <item>
                       <widget class="QLabel" name="label_2">
                        <property name="text">
                         <string>Import existing project</string>
@@ -288,12 +272,19 @@ It's time the desktop caught up with us.</string>
                       </widget>
                      </item>
                      <item>
-                      <widget class="KUrlRequester" name="kurlrequester">
+                      <widget class="KUrlRequester" name="importUrl">
                        <property name="maximumSize">
                         <size>
                          <width>200</width>
                          <height>16777215</height>
                         </size>
+                       </property>
+                      </widget>
+                     </item>
+                     <item>
+                      <widget class="QPushButton" name="importButton">
+                       <property name="text">
+                        <string>Import</string>
                        </property>
                       </widget>
                      </item>
@@ -549,12 +540,10 @@ It's time the desktop caught up with us.</string>
   <tabstop>newProjectButton</tabstop>
   <tabstop>cancelNewProjectButton</tabstop>
   <tabstop>recentProjects</tabstop>
-  <tabstop>kurlrequester</tabstop>
+  <tabstop>importUrl</tabstop>
   <tabstop>contentTypes</tabstop>
  </tabstops>
- <resources>
-  <include location="../../test.qrc"/>
- </resources>
+ <resources/>
  <connections>
   <connection>
    <sender>projectName</sender>
